src/main/java/com/example/appointment_scheduler/error/IncorrectPasswordException.java
package com.example.appointment_scheduler.error;

public class IncorrectPasswordException extends Exception{
    public IncorrectPasswordException(String message) {
        super(message);
    }
    
}
